Added some more config values

--- a/data/2016/sampleData/defaultconfig.yaml
+++ b/data/2016/sampleData/defaultconfig.yaml
@@ -14,6 +14,9 @@ server:
   isFirstPersonOnly: false
   isNoBuildInPois: true
   baseConstructionDamage: 34000
+  damageWeapons: true # Damage weapons on firing
+  disablePOIManager: false # Disables the POI messages
+  disableMapBoundsCheck: false # Disables inboundscheck
 
 # Rcon
 
